# react-sample

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  package.json  pnpm-lock.yaml  webpack.bazel.config.js
public/: index.html
src/: BUILD.bazel  app.tsx  ts_project.bzl  welcome.test.tsx
src/app/: BUILD.bazel  app.test.tsx  app.tsx
src/welcome/: BUILD.bazel  welcome.test.tsx  welcome.tsx
