bazel_dep(name = "aspect_rules_jest", version = "0.19.5")
bazel_dep(name = "aspect_rules_js", version = "1.32.1")
bazel_dep(name = "aspect_rules_swc", version = "1.1.0")
bazel_dep(name = "aspect_rules_ts", version = "2.0.0-rc0")
bazel_dep(name = "bazel_skylib", version = "1.4.2")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    public_hoist_packages = {
        "eslint-config-react-app": [""],
        "eslint": [""],
    },
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

# Install new deps by running:
#   bazel run -- @pnpm//:pnpm --dir $PWD add <package>
#   Add `-D` for a devdependency.
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)

use_repo(pnpm, "pnpm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps(ts_version_from = "//:package.json")

use_repo(rules_ts_ext, "npm_typescript")
