load("//src:ts_project.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_library")

package(
    default_visibility = ["//visibility:private"],
)

ts_project(
    name = "index",
    srcs = ["index.tsx"],
    deps = [
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//src/app",
    ],
)

js_library(
    name = "src",
    visibility = ["//visibility:public"],
    deps = [
        ":index",
    ],
)
