load("//src:ts_project.bzl", "ts_project", "ts_test")

ts_project(
    name = "app",
    srcs = ["app.tsx"],
    visibility = ["//src:__subpackages__"],
    deps = [
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//src/welcome",
    ],
)

ts_test(
    name = "app_test",
    srcs = ["app.test.tsx"],
    deps = [
        ":app",
        "//:node_modules/@testing-library/jest-dom",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@types/jest",
    ],
)
