load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@bazel_skylib//lib:partial.bzl", "partial")
load("@aspect_rules_swc//swc:defs.bzl", "swc")

TRANSPILER = partial.make(
    swc,
    swcrc = "//:.swcrc",
)

ts_project(
    name = "welcome",
    srcs = ["welcome.tsx"],
    declaration = True,
    resolve_json_module = True,
    transpiler = TRANSPILER,
    tsconfig = "//:tsconfig",
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/react",
        "//:node_modules/react-dom",
    ],
)

ts_project(
    name = "welcome_test_lib",
    srcs = ["welcome.test.tsx"],
    declaration = True,
    resolve_json_module = True,
    transpiler = TRANSPILER,
    tsconfig = "//:tsconfig",
    deps = [
        ":welcome",
        "//:node_modules/@testing-library/jest-dom",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@types/jest",
    ],
)

jest_test(
    name = "welcome_test",
    config = "//:jest_config",
    data = [
        ":welcome_test_lib",
        "//:node_modules/jest-environment-jsdom",
        "//:node_modules/jest-transform-stub",
    ],
    node_modules = "//:node_modules",
)
