load("//src:ts_project.bzl", "ts_project", "ts_test")

ts_project(
    name = "welcome",
    srcs = ["welcome.tsx"],
    visibility = ["//src:__subpackages__"],
    deps = [
        "//:node_modules/react",
        "//:node_modules/react-dom",
    ],
)

ts_test(
    name = "welcome_test",
    srcs = ["welcome.test.tsx"],
    deps = [
        ":welcome",
        "//:node_modules/@testing-library/jest-dom",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@types/jest",
        "//:node_modules/jest-environment-jsdom",
        "//:node_modules/jest-transform-stub",
    ],
)
